# anki-card-gen

./: .gitignore  README.md  pyproject.toml  run.py
anki_generator/: __init__.py
secrets/: README.md
