[tool.poetry]
name = "anki-generator"
version = "0.1.0"
description = ""
authors = ["Nick Garvey <garvey.nick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.55"
click = "^8.1"

[tool.poetry.scripts]
anki-card-gen = "run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"